--- a/index.html
+++ b/index.html
@@ -45,6 +45,201 @@
       </div>
     </nav>
 
+    <!-- Container End  -->
+    <div class="container mt-4">
+      <!-- Banner Section Start -->
+      <h2 class="display-5">
+        Firstname Lastname
+        <small class="d-block text-muted">Job Position</small>
+      </h2>
+      <div class="row mb-4">
+        <div class="col-12 col-lg-6">
+          <img
+            class="img-fluid rounded"
+            src="./img/cat.jpg"
+            alt="protfolio image"
+          />
+        </div>
+        <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+          <h3>About</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+            pulvinar purus vitae nisl semper, a ornare purus euismod. Quisque id
+            dapibus ligula, vel finibus lectus. Aliquam neque diam, iaculis non
+            arcu a, fringilla viverra libero. Mauris pharetra quis nulla eget
+            fermentum. In nec dapibus nisl, sit amet convallis nisl. Duis non
+            urna et dui scelerisque volutpat vel sit amet lectus. Praesent vel
+            malesuada erat. Nulla eu accumsan tellus.
+          </p>
+          <p>
+            Sed vehicula, urna non cursus cursus, arcu urna eleifend erat, eget
+            egestas nulla mauris et elit. Mauris et augue sed odio tristique
+            blandit. Ut consequat, massa id interdum convallis, nisi nisi
+            rhoncus erat, blandit laoreet mauris ipsum interdum felis. Aenean
+            tincidunt lacus lectus, sed dapibus diam ultricies sed. Mauris
+            auctor tempor elit, blandit efficitur orci. Duis quam lacus, commodo
+            at odio sit amet, maximus laoreet nulla. Nullam eget tortor ac lacus
+            vehicula ultricies. Mauris mattis quam sit amet lectus egestas,
+            interdum ullamcorper massa vestibulum. Ut in tincidunt ligula. Nunc
+            tortor diam, eleifend quis varius rhoncus, commodo id nisi. In in
+            malesuada nunc.
+          </p>
+        </div>
+      </div>
+
+      <!-- Banner Section End-->
+
+      <!-- Feature project Start  -->
+      <h3 class="mb-3 text-dark">Featured Projects</h3>
+      <div class="row mb-4">
+        <div class="col-12 col-md-6 col-xl-3">
+          <a href="portfolio-item.html">
+            <figure class="figure">
+              <img
+                class="figure-img img-fluid img-thumbnail"
+                src="./img/cat-2.jpg"
+                alt="Portfoilo Item Heading"
+              />
+              <figcaption class="figure-caption">
+                Portfolio Item Heading
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3">
+          <a href="portfolio-item.html">
+            <figure class="figure">
+              <img
+                class="figure-img img-fluid img-thumbnail"
+                src="./img/cat-2.jpg"
+                alt="Portfoilo Item Heading"
+              />
+              <figcaption class="figure-caption">
+                Portfolio Item Heading
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3">
+          <a href="portfolio-item.html">
+            <figure class="figure">
+              <img
+                class="figure-img img-fluid img-thumbnail"
+                src="./img/cat-2.jpg"
+                alt="Portfoilo Item Heading"
+              />
+              <figcaption class="figure-caption">
+                Portfolio Item Heading
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3">
+          <a href="portfolio-item.html">
+            <figure class="figure">
+              <img
+                class="figure-img img-fluid img-thumbnail"
+                src="./img/cat-2.jpg"
+                alt="Portfoilo Item Heading"
+              />
+              <figcaption class="figure-caption">
+                Portfolio Item Heading
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+      <!-- Feature project End  -->
+
+      <!-- Testimonials Start  -->
+      <h3 class="text-dark">Testimonials</h3>
+      <div class="row mb-4">
+        <div class="col-12 col-lg-4">
+          <figure>
+            <blockquote class="blockquote">
+              <p>
+                em ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                pulvinar purus vitae nisl semper, a ornare purus euismod.
+                Quisque id dapibus ligula, vel finibus lectus. Aliquam neque
+                diam, iaculis non arcu a, fringilla viverra libero.
+              </p>
+            </blockquote>
+            <figcaption>Firstname Lastname</figcaption>
+          </figure>
+        </div>
+        <div class="col-12 col-lg-4">
+          <figure>
+            <blockquote class="blockquote">
+              <p>
+                em ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                pulvinar purus vitae nisl semper, a ornare purus euismod.
+                Quisque id dapibus ligula, vel finibus lectus. Aliquam neque
+                diam, iaculis non arcu a, fringilla viverra libero.
+              </p>
+            </blockquote>
+            <figcaption>Firstname Lastname</figcaption>
+          </figure>
+        </div>
+        <div class="col-12 col-lg-4">
+          <figure>
+            <blockquote class="blockquote">
+              <p>
+                em ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                pulvinar purus vitae nisl semper, a ornare purus euismod.
+                Quisque id dapibus ligula, vel finibus lectus. Aliquam neque
+                diam, iaculis non arcu a, fringilla viverra libero.
+              </p>
+            </blockquote>
+            <figcaption>Firstname Lastname</figcaption>
+          </figure>
+        </div>
+      </div>
+      <!-- Testimonial End  -->
+
+      <!-- Form Start  -->
+      <h3 class="text-dark">Contact Me</h3>
+      <form action="" class="mb-4">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                class="form-control"
+                placeholder="Enter Your Name"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="form-control"
+                palceholder="Enter Your Email"
+              />
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <label for="message" class="form-label">Message</label>
+            <textarea
+              name="message"
+              id="message"
+              rows="4"
+              placeholder="Enter Your Message"
+              class="form-control"
+            ></textarea>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-secondary">Send Message</button>
+      </form>
+
+      <!-- Form End  -->
+    </div>
+    <!-- Container End -->
+
     <!-- Bootstrap JS  -->
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
