--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
     <!-- Container End -->
     <footer class="bg-light py-4">
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-sm-6 col-xl-3">
-            <div class="mx-auto" style="width: 33%">
+        <div class="row mb-3">
+          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
+            <div class="parent">
               <div class="d-flex">
                 <div class="fa-layers fa-fw fa-2x me-1">
                   <i class="fas fa-circle text-muted"></i>
@@ -258,7 +258,6 @@
                 </div>
                 <h5 class="m-0">Code</h5>
               </div>
-
               <ul class="list-unstyled d-inline-block ps-2 mt-1">
                 <li>
                   <i class="fab fa-fw fa-github text-muted"></i>
@@ -275,76 +274,97 @@
               </ul>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-xl-3 bg-info">
-            <div class="mx-auto" style="width: 33%">
-              <div class="d-flex">
-                <div class="fa-layers fa-fw fa-2x me-1">
-                  <i class="fas fa-circle text-muted"></i>
-                  <i
-                    class="fas fa-paint-brush text-white"
-                    data-fa-transform="shrink-10"
-                  ></i>
-                </div>
-                <h5 class="m-0">Design</h5>
+          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
+            <div style="width: 170px text-center">
+              <div
+                class="d-inline-block fa-layers fa-fw fa-2x me-1"
+                style="vertical-align: top"
+              >
+                <i class="fas fa-circle text-muted"></i>
+                <i
+                  class="fas fa-paint-brush text-white"
+                  data-fa-transform="shrink-10"
+                ></i>
               </div>
-              <ul class="list-unstyled ps-2 mt-1">
-                <li>
-                  <i class="fab fa-fw fa-behance text-muted"></i>
-                  <a href="">Behance</a>
-                </li>
-                <li>
-                  <i class="fab fa-fw fa-dribbble text-muted"></i>
-                  <a href="">Dribbdle</a>
-                </li>
-              </ul>
+              <h5 class="m-0 d-inline-block" style="vertical-align: middle">
+                Design
+              </h5>
+            </div>
+            <ul class="list-unstyled ps-2 mt-1">
+              <li>
+                <i class="fab fa-fw fa-behance text-muted"></i>
+                <a href="">Behance</a>
+              </li>
+              <li>
+                <i class="fab fa-fw fa-dribbble text-muted"></i>
+                <a href="">Dribbdle</a>
+              </li>
+            </ul>
+          </div>
+          <div
+            class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center bg-danger"
+          >
+            <div class="parent bg-success">
+              <div class="child bg-light">
+                <div>
+                  <div
+                    class="d-inline-block fa-layers fa-fw fa-2x me-1"
+                    style="vertical-align: top"
+                  >
+                    <i class="fas fa-circle text-muted"></i>
+                    <i
+                      class="fas fa-image text-white"
+                      data-fa-transform="shrink-10"
+                    ></i>
+                  </div>
+                  <h5 class="m-0 d-inline-block" style="vertical-align: middle">
+                    Photography
+                  </h5>
+                </div>
+                <ul class="list-unstyled ps-2 mt-1 d-inline-block text-start">
+                  <li>
+                    <i class="fab fa-fw fa-flickr text-muted"></i>
+                    <a href="">Flickr</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-fw fa-instagram text-muted"></i>
+                    <a href="">Instagram</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
-            <div class="mx-auto" style="width: 33%">
-              <div class="d-flex">
-                <div class="fa-layers fa-fw fa-2x me-1">
-                  <i class="fas fa-circle text-muted"></i>
-                  <i
-                    class="fas fa-image text-white"
-                    data-fa-transform="shrink-10"
-                  ></i>
+          <div
+            class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center bg-info"
+          >
+            <div class="parent">
+              <div class="child">
+                <div>
+                  <div
+                    class="d-inline-block fa-layers fa-fw fa-2x me-1"
+                    style="vertical-align: top"
+                  >
+                    <i class="fas fa-circle text-muted"></i>
+                    <i
+                      class="fas fa-video text-white"
+                      data-fa-transform="shrink-10"
+                    ></i>
+                  </div>
+                  <h5 class="d-inline-block m-0" style="vertical-align: middle">
+                    Video
+                  </h5>
                 </div>
-                <h5 class="m-0">Photography</h5>
+                <ul class="list-unstyled ps-2 mt-1">
+                  <li>
+                    <i class="fab fa-fw fa-youtube text-muted"></i>
+                    <a href="#0">YouTube</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-fw fa-vimeo text-muted"></i>
+                    <a href="#0">Vimeo</a>
+                  </li>
+                </ul>
               </div>
-              <ul class="list-unstyled ps-2 mt-1">
-                <li>
-                  <i class="fab fa-fw fa-flickr text-muted"></i>
-                  <a href="">Flickr</a>
-                </li>
-                <li>
-                  <i class="fab fa-fw fa-instagram text-muted"></i>
-                  <a href="">Instagram</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
-            <div class="mx-auto" style="width: 33%">
-              <div class="d-flex">
-                <div class="fa-layers fa-fw fa-2x me-1">
-                  <i class="fas fa-circle text-muted"></i>
-                  <i
-                    class="fas fa-video text-white"
-                    data-fa-transform="shrink-10"
-                  ></i>
-                </div>
-                <h5 class="m-0">Video</h5>
-              </div>
-              <ul class="list-unstyled ps-2 mt-1">
-                <li>
-                  <i class="fab fa-fw fa-youtube text-muted"></i>
-                  <a href="#0">YouTube</a>
-                </li>
-                <li>
-                  <i class="fab fa-fw fa-vimeo text-muted"></i>
-                  <a href="#0">Vimeo</a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
