--- a/index.html
+++ b/index.html
@@ -243,69 +243,16 @@
       <!-- Form End  -->
     </div>
     <!-- Container End -->
+
+    <!-- footer start  -->
     <footer class="bg-light py-4">
       <div class="container">
         <div class="row mb-3">
-          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
-            <div class="parent">
-              <div class="d-flex">
-                <div class="fa-layers fa-fw fa-2x me-1">
-                  <i class="fas fa-circle text-muted"></i>
-                  <i
-                    class="fas fa-code text-white"
-                    data-fa-transform="shrink-10"
-                  ></i>
-                </div>
-                <h5 class="m-0">Code</h5>
-              </div>
-              <ul class="list-unstyled d-inline-block ps-2 mt-1">
-                <li>
-                  <i class="fab fa-fw fa-github text-muted"></i>
-                  <a href="#0">GitHub</a>
-                </li>
-                <li>
-                  <i class="fab fa-fw fa-codepen text-muted"></i>
-                  <a href="">CodePen</a>
-                </li>
-                <li>
-                  <i class="fab fa-fw fa-stack-overflow text-muted"></i>
-                  <a href="">Stack Overflow</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
-            <div style="width: 170px text-center">
-              <div
-                class="d-inline-block fa-layers fa-fw fa-2x me-1"
-                style="vertical-align: top"
-              >
-                <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-paint-brush text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
-              </div>
-              <h5 class="m-0 d-inline-block" style="vertical-align: middle">
-                Design
-              </h5>
-            </div>
-            <ul class="list-unstyled ps-2 mt-1">
-              <li>
-                <i class="fab fa-fw fa-behance text-muted"></i>
-                <a href="">Behance</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-dribbble text-muted"></i>
-                <a href="">Dribbdle</a>
-              </li>
-            </ul>
-          </div>
           <div
-            class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center bg-danger"
+            class="col-12 col-sm-6 mb-4 mb-xl-0 col-xl-3 d-flex justify-content-center"
           >
-            <div class="parent bg-success">
-              <div class="child bg-light">
+            <div class="parent">
+              <div class="child">
                 <div>
                   <div
                     class="d-inline-block fa-layers fa-fw fa-2x me-1"
@@ -313,14 +260,78 @@
                   >
                     <i class="fas fa-circle text-muted"></i>
                     <i
-                      class="fas fa-image text-white"
+                      class="fas fa-code text-white"
                       data-fa-transform="shrink-10"
                     ></i>
                   </div>
-                  <h5 class="m-0 d-inline-block" style="vertical-align: middle">
-                    Photography
+                  <h5 class="d-inline-block m-0" style="vertical-align: middle">
+                    Code
                   </h5>
                 </div>
+                <ul class="list-unstyled d-inline-block ps-2 mt-1">
+                  <li>
+                    <i class="fab fa-fw fa-github text-muted"></i>
+                    <a href="#0">GitHub</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-fw fa-codepen text-muted"></i>
+                    <a href="">CodePen</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-fw fa-stack-overflow text-muted"></i>
+                    <a href="">Stack Overflow</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
+            <div class="parent">
+              <div class="child">
+                <div
+                  class="d-inline-block fa-layers fa-fw fa-2x me-1"
+                  style="vertical-align: top"
+                >
+                  <i class="fas fa-circle text-muted"></i>
+                  <i
+                    class="fas fa-paint-brush text-white"
+                    data-fa-transform="shrink-10"
+                  ></i>
+                </div>
+                <h5 class="m-0 d-inline-block" style="vertical-align: middle">
+                  Design
+                </h5>
+
+                <ul class="list-unstyled ps-2 mt-1">
+                  <li>
+                    <i class="fab fa-fw fa-behance text-muted"></i>
+                    <a href="">Behance</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-fw fa-dribbble text-muted"></i>
+                    <a href="">Dribbdle</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
+            <div class="parent">
+              <div class="child">
+                <div
+                  class="d-inline-block fa-layers fa-fw fa-2x me-1"
+                  style="vertical-align: top"
+                >
+                  <i class="fas fa-circle text-muted"></i>
+                  <i
+                    class="fas fa-image text-white"
+                    data-fa-transform="shrink-10"
+                  ></i>
+                </div>
+                <h5 class="m-0 d-inline-block" style="vertical-align: middle">
+                  Photography
+                </h5>
+
                 <ul class="list-unstyled ps-2 mt-1 d-inline-block text-start">
                   <li>
                     <i class="fab fa-fw fa-flickr text-muted"></i>
@@ -334,9 +345,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center bg-info"
-          >
+          <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center">
             <div class="parent">
               <div class="child">
                 <div>
@@ -373,6 +382,8 @@
         </p>
       </div>
     </footer>
+    <!-- footer end  -->
+
     <!-- Bootstrap JS  -->
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
