add portfolion item page

--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Container Start -->
-    <div class="contaier mt-4">
+    <div class="container mt-4">
       <div class="row">
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
@@ -58,6 +58,272 @@
               src="./img/510x400.png"
               alt="Portfolio item heading"
             />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+          <div class="card">
+            <div class="badge bg-primary position-absolute mt-3 ms-3">Top</div>
+            <img
+              class="card-img-top"
+              src="./img/510x400.png"
+              alt="Portfolio item heading"
+            />
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Item Heading</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                aliquid voluptatibus tempora, ut esse eos.
+              </p>
+              <a
+                href="portfolion-item.html"
+                class="btn btn-primary btn-block stretched-link"
+                >See Item</a
+              >
+            </div>
+            <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
         </div>
       </div>
