add some column

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -144,6 +144,65 @@
             maxime explicabo officia quis qui laudantium ex expedita non omnis
             consequuntur, quae nostrum. Inventore?
           </p>
+          <h3>Project Details</h3>
+          <ul>
+            <li>Description of detail</li>
+            <li>Description of detail</li>
+            <li>Description of detail</li>
+            <li>Description of detail</li>
+            <li>Description of detail</li>
+          </ul>
+        </div>
+      </div>
+      <h3>Related Project</h3>
+      <div class="row">
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+          <figure class="figure">
+            <img
+              src="./img/510x400.png"
+              alt="portfolion Item Heading"
+              class="figure-img img-fluid img-thumbnail"
+            />
+            <figcaption class="figure-caption">
+              Portfolio Item Heading
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+          <figure class="figure">
+            <img
+              src="./img/510x400.png"
+              alt="portfolion Item Heading"
+              class="figure-img img-fluid img-thumbnail"
+            />
+            <figcaption class="figure-caption">
+              Portfolio Item Heading
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+          <figure class="figure">
+            <img
+              src="./img/510x400.png"
+              alt="portfolion Item Heading"
+              class="figure-img img-fluid img-thumbnail"
+            />
+            <figcaption class="figure-caption">
+              Portfolio Item Heading
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+          <figure class="figure">
+            <img
+              src="./img/510x400.png"
+              alt="portfolion Item Heading"
+              class="figure-img img-fluid img-thumbnail"
+            />
+            <figcaption class="figure-caption">
+              Portfolio Item Heading
+            </figcaption>
+          </figure>
         </div>
       </div>
     </div>
